@@ -3,6 +3,7 @@
 # objdump: -dr --prefix-addresses --show-raw-insn
 # The arm-aout and arm-pe ports do not support Thumb branch relocations.
 # not-target: *-*-*aout* *-*-pe
+# error-output: thumb32.l
 
 .*: +file format .*arm.*
 
