@@ -1,3 +1,10 @@
+2006-05-04  Kazu Hirata  <kazu@codesourcery.com>
+
+	* gas/arm/armv1.d (error-output): New.
+	* gas/arm/armv1.l: New.
+	* gas/arm/thumb32.d (error-output): New.
+	* gas/arm/thumb32.l: New.
+
 2006-05-04  Thiemo Seufer  <ths@mips.com>
             Nigel Stephens  <nigel@mips.com>
 
